Fixed Text-Color to dark pink

--- a/skilled-elearning/index.html
+++ b/skilled-elearning/index.html
@@ -73,35 +73,35 @@
           <img class="absolute -top-7" src="assets/icon-animation.svg"/>
           <h2 class="font-extrabold mb-4">Automation</h2>
           <span class="block text-lightgray mb-6">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span>
-          <button class="text-lightpink font-bold text-lg">Get Started</button>
+          <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-design.svg"/>
           <h2 class="font-extrabold mb-4">Design</h2>
           <span class="block text-lightgray mb-6">Create beautiful, usable interfaces to help shape the future of how the web looks.</span>
-          <button class="text-lightpink font-bold text-lg">Get Started</button>
+          <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-photography.svg"/>
           <h2 class="font-extrabold mb-4">Photography</h2>
           <span class="block text-lightgray mb-6">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</span>
-          <button class="text-lightpink font-bold text-lg">Get Started</button>
+          <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-crypto.svg"/>
           <h2 class="font-extrabold mb-4">Crypto</h2>
           <span class="block text-lightgray mb-6">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</span>
-          <button class="text-lightpink font-bold text-lg">Get Started</button>
+          <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-business.svg"/>
           <h2 class="font-extrabold mb-4">Business</h2>
           <span class="block text-lightgray mb-6">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</span>
-          <button class="text-lightpink font-bold text-lg">Get Started</button>
+          <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
       </div>
     </main>
