--- a/skilled-elearning/index.html
+++ b/skilled-elearning/index.html
@@ -56,8 +56,8 @@
     <main class="mb-auto  ">
       <div class="grid grid-cols-1 sm:grid-cols-2  px-4 sm:px-10  lg:px-40 sm:mb-48 lg:mb-56">
         <div class="mb-10 ">
-          <h1 class="text-darkblue text-[40px] lg:text-[56px] font-extrabold leading-[3.15rem] mb-7">Maximize skill, minimize budget</h1>
-          <div class="text-base lg:text-[18px] text-lightgray font-medium mb-7">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</div>
+          <h1 class="text-darkblue text-[40px] lg:leading-[4.5rem]  lg:text-[56px] font-extrabold leading-[3.15rem] mb-7">Maximize skill, minimize budget</h1>
+          <div class="text-base lg:text-[18px] leading-7 text-lightgray font-medium mb-7">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</div>
           <button class="font-bold text-white bg-gradient-to-b from-gradientorange1 to-gradientorange2 hover:opacity-50 py-4 px-10 rounded-full">Get Started</button>
         </div>
         <div class="sm:hidden">
