Fixed heading sizes and margin

--- a/skilled-elearning/index.html
+++ b/skilled-elearning/index.html
@@ -53,8 +53,8 @@
         <button class="bg-darkblue hover:bg-grayishblue text-white text-base font-bold px-6 py-2.5 rounded-full">Get Started</button>
       </div>
     </header>
-    <main class="mb-auto  ">
-      <div class="grid grid-cols-1 sm:grid-cols-2  px-4 sm:px-10  lg:px-40 sm:mb-48 lg:mb-56">
+    <main class="p ">
+      <div class="grid grid-cols-1 sm:grid-cols-2  px-4 sm:px-10  lg:px-40 sm:mb-48 lg:mb-64">
         <div class="mb-10 ">
           <h1 class="text-darkblue text-[40px] lg:leading-[4.5rem]  lg:text-[56px] font-extrabold leading-[3.15rem] mb-7">Maximize skill, minimize budget</h1>
           <div class="text-base lg:text-[18px] leading-7 text-lightgray font-medium mb-7">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</div>
@@ -71,35 +71,35 @@
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-animation.svg"/>
-          <h2 class="font-extrabold mb-4">Automation</h2>
+          <h2 class="font-extrabold mb-4 text-xl lg:text-2xl">Automation</h2>
           <span class="block text-lightgray mb-6">Learn the latest animation techniques to create stunning motion design and captivate your audience.</span>
           <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-design.svg"/>
-          <h2 class="font-extrabold mb-4">Design</h2>
+          <h2 class="font-extrabold mb-4 text-xl lg:text-2xl">Design</h2>
           <span class="block text-lightgray mb-6">Create beautiful, usable interfaces to help shape the future of how the web looks.</span>
           <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-photography.svg"/>
-          <h2 class="font-extrabold mb-4">Photography</h2>
+          <h2 class="font-extrabold mb-4 text-xl lg:text-2xl">Photography</h2>
           <span class="block text-lightgray mb-6">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</span>
           <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-crypto.svg"/>
-          <h2 class="font-extrabold mb-4">Crypto</h2>
+          <h2 class="font-extrabold mb-4 text-xl lg:text-2xl">Crypto</h2>
           <span class="block text-lightgray mb-6">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</span>
           <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
 
         <div class="relative bg-white rounded-xl px-7 sm:px-8 pt-14 pb-10 shadow-design">
           <img class="absolute -top-7" src="assets/icon-business.svg"/>
-          <h2 class="font-extrabold mb-4">Business</h2>
+          <h2 class="font-extrabold mb-4 text-xl lg:text-2xl">Business</h2>
           <span class="block text-lightgray mb-6">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</span>
           <button class="text-darkpink font-bold text-lg">Get Started</button>
         </div>
